examples/errors/MutualInclusion.huff
#define macro MAIN() = {
    __codeoffset(OTHER)
}

#define macro OTHER() = {
    WOW()
}

#define macro WOW() = {
    __codeoffset(MAIN)
    
}
